all data fetch commit

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <main>
        <!-- menu section  -->
        <div>
-        <ul class="flex justify-between px-12 py-8 text-slate-500 menu menu-horizontal bg-base-100 rounded-box">
-            <li><a>Home</a></li>
+        <ul id="all-menu" class="flex justify-between px-12 py-8 text-slate-500 menu menu-horizontal bg-base-100 rounded-box">
+            <!-- <li><a>Home</a></li>
             <li><a>Breaking news</a></li>
             <li><a>Regular news</a></li>
             <li><a>International news</a></li>
@@ -52,7 +52,7 @@
             <li><a>Entertainment</a></li>
             <li><a>Culture</a></li>
             <li><a>Arts </a></li>
-            <li><a>All news</a></li>
+            <li><a>All news</a></li> -->
           </ul>
        </div>
        <!-- items found for each chatagories section  -->
