news chategories added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
        </div>
 
        <!-- card section  -->
-       <section class="container mx-auto">
+       <!-- <section class="container mx-auto">
         <div class="card card-side bg-base-100 shadow-xl">
             <figure><img src="https://placeimg.com/200/280/arch" alt="Movie"></figure>
             <div class="card-body">
@@ -83,6 +83,12 @@
               </div>
             </div>
           </div>
+       </section> -->
+
+       <section>
+        <div id="news-items-container">
+            
+        </div>
        </section>
 
 
