news category link open added

--- a/index.html
+++ b/index.html
@@ -72,27 +72,14 @@
        </div>
 
        <!-- card section  -->
-       <!-- <section class="container mx-auto">
+       <section id="news-items-container" class="container mx-auto">
         <div class="card card-side bg-base-100 shadow-xl">
-            <figure><img src="https://placeimg.com/200/280/arch" alt="Movie"></figure>
-            <div class="card-body">
-              <h2 class="card-title">New movie is released!</h2>
-              <p>Click the button to watch on Jetflix app.</p>
-              <div class="card-actions justify-end">
-                <button class="btn btn-primary">Watch</button>
-              </div>
-            </div>
-          </div>
-       </section> -->
 
-       <section>
-        <div id="news-items-container">
-            
         </div>
+   
        </section>
 
-
-
+  
         <script src="index.js"></script>
     </main>
 </body>
