card section design

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>News Today</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- font awsome  -->
+    <script src="https://kit.fontawesome.com/92e658fd15.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -44,15 +46,7 @@
        <!-- menu section  -->
        <div>
         <ul id="all-menu" class="flex justify-between px-12 py-8 text-slate-500 menu menu-horizontal bg-base-100 rounded-box">
-            <!-- <li><a>Home</a></li>
-            <li><a>Breaking news</a></li>
-            <li><a>Regular news</a></li>
-            <li><a>International news</a></li>
-            <li><a>Sports</a></li>
-            <li><a>Entertainment</a></li>
-            <li><a>Culture</a></li>
-            <li><a>Arts </a></li>
-            <li><a>All news</a></li> -->
+            
           </ul>
        </div>
        <!-- items found for each chatagories section  -->
