not found section added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           </div>
          <hr>
     </header>
+   
     <main>
        <!-- menu section  -->
        <div>
@@ -64,7 +65,10 @@
             <button class="btn text-red-600 bg-base-100 sm:btn-sm ">Trending</button>
         </div>
        </div>
+         <!-- No result found  -->
+    <section id="not-found">
 
+    </section>
        <!-- card section  -->
        <section id="news-items-container" class="container mx-auto">
         <div class="card card-side bg-base-100 shadow-xl">
