blog page added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </div>
       <div class="flex-none gap-2">
         <div class="flex list-none">
-          <li class="px-5 text-red-600 font-bold">News</li>
-          <li class="px-5 font-bold">Blogs</li>
+          <a class="px-5 text-red-600 font-bold">News</a>
+          <a class="px-5 font-bold" href="blog.html" target="_blank">Blogs</a>
         </div>
         <div class="dropdown dropdown-end">
           <label tabindex="0" class="btn btn-ghost btn-circle avatar">
