--- a/index.html
+++ b/index.html
@@ -81,16 +81,16 @@
 
     <!-- Modal  -->
     <input type="checkbox" id="my-modal-3" class="modal-toggle" />
-    <div class="modal">
-      <div class="modal-box relative">
-        <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
-        <h5 class="modal-title" id="newsDetailModalLabel"></h5>
-        <div id="modal-body" class="news-details">
+<div class="modal">
+  <div class="modal-box relative">
+    <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+    <div id="modal-body">
+      
+      
 
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-      </div>
     </div>
+  </div>
+</div>
 
     <script src="index.js"></script>
   </main>
