--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 <div class="modal">
   <div class="modal-box relative">
     <label for="my-modal-3" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+    <p class="p-4 text center font-bold text-2xl">Picture</p>
     <div id="modal-body">
       
       
